Prevent clicking the toolbar from taking focus away from web content.

AppKit calls acceptsFirstResponder when computing drag regions for the
window *and* when handling mouse clicks. If BridgedContentView always
returns YES, then it's consistently undraggable but clicking always
takes first responder. The check in becomesFirstResponder: was supposed
to help with that, but in reality the window itself becomes first
responder when it returns YES from acceptsFirstResponder and NO from
becomeFirstResponder.

r578642 broke this and suggested the alternate approach below. The
comment above acceptsFirstResponder is almost verbatim what was there
*before* that change.

Bug: 900527
Change-Id: I16913e2e5084185b8d49c0342fcf89a9edd6cf65
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1555509
Auto-Submit: Sidney San Martín <sdy@chromium.org>
Commit-Queue: Avi Drissman <avi@chromium.org>
Reviewed-by: Avi Drissman <avi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#648678}
Former-commit-id: 38bcbdb84b3c0da7d6ff67cadb28e3719f93441c